🐛Map popup overflow correction

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -24,7 +24,6 @@
     width: 300px;
     max-height: 400px;
     overflow: visible;
-    overflow-y: auto;
     border-radius: 0px;
     box-shadow: 0px 5px 5px #888888;
     border: var(--border-width) solid black;
